Fix stream view alignment

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -190,12 +190,11 @@ input[type="checkbox"]+label:after {
     padding-bottom: 56.25%
 }
 
-#stream-box {
+.stream-box {
     position: relative;
     z-index: 0;
     width: 100%;
     /*height: 600px;*/
-    background-color: #C4C4C4;
     box-shadow: 0px 7px 11px -4px rgba(0, 0, 0, 0.36);
 }
 
@@ -1673,7 +1672,7 @@ input[type="checkbox"]+label:after {
 
 
 @media screen and (min-width: 768px) {
-    #stream-box {
+    .stream-box {
         /*height: 70vh;*/
         width: auto;
     }
